@startuml
'https://plantuml.com/class-diagram

class Inscripcion {
    - materias: Set<Materia>
    - alumno: Alumno
    + aprobada(): Boolean
}

class Alumno {
    - materiasAprobadas: Set<Materia>
    - nombre: String
    + estaAprobada(Materia materia): Boolean
}

class Materia {
    - codigo: Integer
    - nombre: String
    - correlativas: Set<Materia>
    + verificarCorrelativas(Alumno alumno): Boolean
}

Materia --> "*"Materia
Inscripcion --> "*"Materia
Inscripcion --* Alumno
Alumno --> "*"Materia

@enduml